--- a/FE/src/components/introduce/scrollAnimation.css
+++ b/FE/src/components/introduce/scrollAnimation.css
@@ -1,3 +1,9 @@
+/* 기존 애니메이션 스타일 유지 */
+.text-char {
+  display: inline-block;
+  transition: color 0.2s ease;
+}
+
 /* 무한 스크롤을 위한 컨테이너 설정 */
 .scroll-container {
   position: relative;
@@ -32,4 +38,28 @@
   100% {
     transform: translateY(0);
   }
+}
+
+/* 새로운 텍스트 오버레이 스타일 */
+.text-overlay-container {
+  position: relative;
+}
+
+.text-base {
+  position: absolute;
+  font-size: 75px;
+  font-weight: 800;
+  line-height: 90px;
+  -webkit-text-stroke: 1px black;
+  color: black;
+}
+
+.text-blend {
+  position: absolute;
+  font-size: 75px;
+  font-weight: 800;
+  line-height: 90px;
+  -webkit-text-stroke: 1px black;
+  color: white;
+  mix-blend-mode: difference;
 }
